--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: website
 author: meepcat2022
-url: https://www.sadblooketgamer.github.io/-/ # root address of the site
+url: https://www.sadblooketgamer.github.io # root address of the site
 description: > # description of the site (multiple lines allowed)
    A custom gime site as I am tired of other sites getting blocked by school security for simple reasons so my bois complain to me. I hope you enjoy your experience on this site. Happy school giming! 
 
